# CTStudio

./: .gitmodules  CMakeLists.txt  Contributing.md  Readme.md
Source/: CMakeLists.txt
Source/Common/: CMake.hpp.in  CMakeLists.txt
Source/Core/: CMakeLists.txt  Callbacks.cpp  Callbacks.hpp  Core.cpp  Core.hpp  Project.cpp  Project.hpp  ProjectManager.cpp  ProjectManager.hpp
Source/Core/Data/: DataManager.cpp  DataManager.hpp  ProjectData.cpp  ProjectData.hpp
Source/Core/Task/: Task.cpp  Task.hpp  TaskManager.cpp  TaskManager.hpp
Source/QtUI/: AboutDialog.cpp  AboutDialog.hpp  CMakeLists.txt  CoreCallbacks.cpp  CoreCallbacks.hpp  MainWindow.cpp  MainWindow.hpp  MenuBar.cpp  MenuBar.hpp  StatusBar.cpp  StatusBar.hpp  main.cpp
Source/QtUI/Editor/: EditorBar.cpp  EditorBar.hpp  EditorBase.cpp  EditorBase.hpp  EditorContainer.cpp  EditorContainer.hpp  NodeProperties.cpp  NodeProperties.hpp  ProjectOutliner.cpp  ProjectOutliner.hpp  SharedEditorState.cpp  SharedEditorState.hpp
Source/QtUI/Editor/Node/: Node.cpp  Node.hpp  NodeManager.cpp  NodeManager.hpp
Source/QtUI/Wizard/: ProjectWizard.cpp  ProjectWizard.hpp
Tests/: CMakeLists.txt
Tests/Core/: Project.cpp
